--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 </head>
 <body>
 
+
+  <input id="p1-color" placeholder="Pick a color Player 1">
+  <input id="p2-color" placeholder="Pick a color Player 2">
+  <button id="start-game">Start Game</button>
+
+
 <div id="game">
   <table id="board"></table>
 </div>
